tests/regression/errors/pypyfunc_call_errors.ctp

def (main:
    while ((y : mut = 0):
        y = 5
        std.cout << y
    )
)
